--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainWindow.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainWindow.xaml
@@ -1,8 +1,14 @@
 ﻿<Window x:Class="FacebookIntegrationApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Facebook Integration" Height="350" Width="525">
     <Grid>
-        
+        <TextBlock Text="Welcome To Aviad and Omer's Facebook App!" Margin="28,36,27,249" RenderTransformOrigin="0.58,0.481" FontFamily="Roboto" FontSize="22"/>
+        <Button Background="#3b5998" 
+                Content="Login using Facebook"
+                Margin="98,118,93,106" 
+                FontFamily="Roboto" 
+                FontWeight="Bold" 
+                FontSize="20" />
     </Grid>
 </Window>
