--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/LoginView.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/LoginView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="FacebookIntegrationApp.MainView"
+﻿<Window x:Class="FacebookIntegrationApp.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Facebook Integration" Height="350" Width="525">
