--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/App.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="FacebookIntegrationApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainView.xaml">
+             StartupUri="LoginView.xaml">
     <Application.Resources>
          
     </Application.Resources>
