--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -13,9 +13,12 @@
             Width="80" >
             <Image Stretch="Fill" ToolTip="Your photo"/>
         </Border>
-        <TextBox Margin="107,64,112,135" x:Name="StatusText" FontFamily="Roboto" Text="Post status here"/>
-        <Button Click="PostStatus" Content="Post" HorizontalAlignment="Left" Margin="432,64,0,0" VerticalAlignment="Top" Width="97" Height="24"/>
-        <TextBlock HorizontalAlignment="Left" Margin="107,29.96,0,0" TextWrapping="Wrap" Text="Welcome" VerticalAlignment="Top" Height="25.96" Width="400" FontFamily="Roboto" FontSize="24"/>
+        <TextBox Margin="107,55,112,144" x:Name="StatusText" FontFamily="Roboto" Text="Post status here"/>
+        <Button Click="PostStatus" Content="Post" HorizontalAlignment="Left" Margin="432,55,0,0" VerticalAlignment="Top" Width="97" Height="33" FontFamily="Roboto" FontSize="20"/>
+        <TextBlock HorizontalAlignment="Left" Margin="107,18.96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="25.96" Width="400" FontFamily="Roboto" FontSize="24"><Run Text="W"/><Run Text="elcome"/></TextBlock>
+
+        <Button Click="PickASongFunction" Content="Pick me a song !" HorizontalAlignment="Left" Margin="27,148,0,0" VerticalAlignment="Top" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18"/>
+        <Button Click="WinterFunction"  Content="Do for winter" HorizontalAlignment="Left" Margin="341,148,0,0" VerticalAlignment="Top" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18"/>
 
     </Grid>
 </Window>
