--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -17,8 +17,12 @@
         <Button Click="PostStatus" Content="Post" HorizontalAlignment="Left" Margin="432,55,0,0" VerticalAlignment="Top" Width="97" Height="33" FontFamily="Roboto" FontSize="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="107,18.96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="25.96" Width="400" FontFamily="Roboto" FontSize="24"><Run Text="W"/><Run Text="elcome"/></TextBlock>
 
-        <Button Click="PickASongFunction" Content="Pick me a song !" HorizontalAlignment="Left" Margin="27,148,0,0" VerticalAlignment="Top" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18"/>
-        <Button Click="WinterFunction"  Content="Do for winter" HorizontalAlignment="Left" Margin="341,148,0,0" VerticalAlignment="Top" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18"/>
+        <Button Click="PickASongFunction" Content="Pick me a song !" HorizontalAlignment="Left" Margin="27,148,0,0" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18" HorizontalContentAlignment="Center"/>
+        <Button Click="WinterFunction" HorizontalAlignment="Center" Margin="341,148,0,0" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18">
+            <Button.Content>
+                <TextBlock HorizontalAlignment="Right" VerticalAlignment="Center">When should I<LineBreak/>post new status?</TextBlock>
+            </Button.Content>
+        </Button>
 
     </Grid>
 </Window>
