--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="FacebookIntegrationApp.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Design Patterns App" Height="262" Width="547" Background="#E3F2FD">
+        Title="Design Patterns App" Height="262" Width="547" Background="#03A9F4">
     <Grid>
         <GroupBox Header="Special functions!" HorizontalAlignment="Left" Margin="10,115.52,0,0" VerticalAlignment="Top" Width="519" Height="96.48"/>
 
@@ -16,12 +16,20 @@
             <Image Stretch="Fill" ToolTip="Your photo"/>
         </Border>
         <TextBox Margin="107,55,112,144" x:Name="StatusText" FontFamily="Roboto" Text="Post status here"/>
-        <Button Click="PostStatus" Content="Post" HorizontalAlignment="Left" Margin="432,55,0,0" VerticalAlignment="Top" Width="97" Height="33" FontFamily="Roboto" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="107,18.96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="25.96" Width="400" FontFamily="Roboto" FontSize="24"><Run Text="W"/><Run Text="elcome"/></TextBlock>
+        <Button BorderBrush="Transparent" BorderThickness="0" Click="PostStatus" Content="Post" HorizontalAlignment="Left" Margin="432,55,0,0" VerticalAlignment="Top" Width="97" Height="33" FontFamily="Roboto" FontSize="20" Foreground="White" Background="#FF0277BD"/>
+        <TextBlock HorizontalAlignment="Left" Margin="107,18.96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="25.96" Width="400" FontFamily="Roboto" FontSize="24" Foreground="White"><Run Text="W"/><Run Text="elcome"/></TextBlock>
 
-        <Button Click="PickASongFunction" Content="Pick me a song !" HorizontalAlignment="Left" Margin="21,146.52,0,30.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18" HorizontalContentAlignment="Center"/>
-        <Button Click="WinterFunction" HorizontalAlignment="Center" Margin="353,149.52,20,27.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18">
-            <TextBlock HorizontalAlignment="Right" VerticalAlignment="Center"><Run Text="When should I"/><LineBreak/><Run Text="post new status?"/></TextBlock>
+        <Button 
+        BorderBrush="Transparent"
+        BorderThickness="0" 
+            Foreground="White"
+            Padding="-4"
+            Click="PickASongFunction" Content="Pick me a song !" HorizontalAlignment="Left" Margin="21,146.52,0,30.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto Cn" FontSize="18" HorizontalContentAlignment="Center" Background="#FF0277BD"/>
+        <Button
+        BorderBrush="Transparent"
+        BorderThickness="0" 
+            Click="WinterFunction" HorizontalAlignment="Center" Margin="353,149.52,20,27.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18" Background="#FF0277BD">
+            <TextBlock HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="White"><Run Text="When should I"/><LineBreak/><Run Text="post new status?"/></TextBlock>
         </Button>
 
     </Grid>
