--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -16,19 +16,21 @@
             <Image x:Name="ProfilePic" Stretch="Fill" ToolTip="Your photo"/>
         </Border>
         <TextBox Margin="107,55,112,144" x:Name="StatusText" FontFamily="Roboto" Text="Post status here"/>
-        <Button BorderBrush="Transparent" BorderThickness="0" Click="PostStatus" Content="Post" HorizontalAlignment="Left" Margin="432,55,0,0" VerticalAlignment="Top" Width="97" Height="33" FontFamily="Roboto" FontSize="20" Foreground="White" Background="#FF0277BD"/>
+        <Button Focusable="False" BorderBrush="Transparent" BorderThickness="0" Click="PostStatus" Content="Post" HorizontalAlignment="Left" Margin="432,55,0,0" VerticalAlignment="Top" Width="97" Height="33" FontFamily="Roboto" FontSize="20" Foreground="White" Background="#FF0277BD"/>
         <TextBlock HorizontalAlignment="Left" Margin="107,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="105" FontFamily="Roboto" FontSize="24" Foreground="White"><Run Text="W"/><Run Text="elcome,"/></TextBlock>
 
         <Button 
+        Focusable="False"
         BorderBrush="Transparent"
         BorderThickness="0" 
-            Foreground="White"
-            Padding="-4"
-            Click="PickASongFunction" Content="Pick me a song !" HorizontalAlignment="Left" Margin="21,146.52,0,30.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto Cn" FontSize="18" HorizontalContentAlignment="Center" Background="#FF0277BD"/>
+        Foreground="White"
+        Padding="-4"
+        Click="PickASongFunction" Content="Pick me a song !" HorizontalAlignment="Left" Margin="21,146.52,0,30.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto Cn" FontSize="18" HorizontalContentAlignment="Center" Background="#FF0277BD"/>
         <Button
+        Focusable="False"
         BorderBrush="Transparent"
         BorderThickness="0" 
-            Click="WinterFunction" HorizontalAlignment="Center" Margin="353,149.52,20,27.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18" Background="#FF0277BD">
+            Click="PostStatistics" HorizontalAlignment="Center" Margin="353,149.52,20,27.52" VerticalAlignment="Center" Width="166" Height="54.96" FontFamily="Roboto" FontSize="18" Background="#FF0277BD">
             <TextBlock HorizontalAlignment="Right" VerticalAlignment="Center" Foreground="White"><Run Text="When should I"/><LineBreak/><Run Text="post new status?"/></TextBlock>
         </Button>
         <TextBlock x:Name="UserName" HorizontalAlignment="Left" Margin="214,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="105" FontFamily="Roboto" FontSize="24" Foreground="White"></TextBlock>
