add threads and auto login

--- a/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/LoginView.xaml
+++ b/Design Patterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/LoginView.xaml
@@ -25,6 +25,7 @@
                 </StackPanel>
             </Button.Content>
         </Button>
+        <CheckBox Name="checkAutoLogIn" IsChecked="True" Content="Remember name and password?" Margin="98,222,-98,-221.5"></CheckBox>
     </Grid>
 </Window>
 
