--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/LoginView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/LoginView.xaml
@@ -25,7 +25,7 @@
                 </StackPanel>
             </Button.Content>
         </Button>
-        <CheckBox Name="checkAutoLogIn" IsChecked="True" Content="Remember name and password?" Margin="98,222,-98,-221.5"></CheckBox>
+        <CheckBox Name="checkAutoLogIn" IsChecked="True" Content="Remember name and password?" Margin="98,222,93.4,76.8"></CheckBox>
     </Grid>
 </Window>
 
