--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/HoroscopeView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/HoroscopeView.xaml
@@ -6,21 +6,11 @@
         xmlns:local="clr-namespace:FacebookIntegrationApp"
         mc:Ignorable="d"
         Title="HoroscopeView" Height="483.609" Width="610.376" Background="{x:Null}">
-    <Grid Margin="0,0,-4.5,0">
-        <Grid.Background>
-            <ImageBrush ImageSource="img/Horoscope.jpg" Opacity="0.4">
-                <ImageBrush.RelativeTransform>
-                    <TransformGroup>
-                        <ScaleTransform/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </ImageBrush.RelativeTransform>
-            </ImageBrush>
-        </Grid.Background>
-        <TextBlock x:Name="HoroscopeContent" HorizontalAlignment="Left" Height="217" Margin="63,150,0,0" Foreground="#FF719CDF" TextWrapping="Wrap" VerticalAlignment="Top" Width="487" FontWeight="Bold" FontSize="18.667"/>
-        <TextBlock x:Name="HoroscopeSign" HorizontalAlignment="Left" Margin="159,74,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="72" Width="307" Foreground="#FFE61414" FontSize="46.667" TextAlignment="Center"/>
-
+    <Grid Margin="0,0,-4.5,0" Background="#FFF7F7F7">
+        <TextBlock x:Name="HoroscopeSign" HorizontalAlignment="Left" Margin="143.12,44.797,0,0" TextWrapping="Wrap" Height="72" Width="307" Foreground="#FF3B5998" FontSize="46.667" TextAlignment="Center" Text="HORO SIGN" VerticalAlignment="Top" FontFamily="Roboto" FontWeight="Bold"/>
+        <Border CornerRadius="10" BorderThickness="1,1,1,5" Margin="48,116.797,39.6,50.003" HorizontalAlignment="Center" VerticalAlignment="Bottom" BorderBrush="#FF8B9DC3">
+            <TextBlock x:Name="HoroscopeContent" HorizontalAlignment="Left" Height="274.075" Margin="5" Foreground="Black" TextWrapping="Wrap" VerticalAlignment="Top" Width="512.985" FontSize="18.667" FontFamily="Tahoma"><Run Text="Lorem ipsum dolor sit amet, sumo singulis liberavisse et sea, ius modus labitur et, te vim adhuc dictas. Eos at inani sapientem. Te quem suas ullum vim. In vix omnis epicuri persequeris, facer placerat eleifend an cum. Quo tale conceptam ut, cu sit facete lucilius elaboraret. Mediocrem interesset delicatissimi ex mei, has no idque offenditLorem ipsum dolor sit amet, sumo singulis liberavisse et sea, ius modus labitur et, te vim adhuc dictas. Eos at inani sapientem. Te quem suas ullum vim. In vix omnis epicuri persequeris, facer placerat eleifend an cum. Quo tale conceptam ut, cu sit facete lucilius elaboraret. Mediocrem interesset delicatissimi ex mei, has no idque offendit"/><LineBreak/><Run Text="Lorem ipsum dolor sit amet, sumo singulis liberavisse et sea, ius modus labitur et, te vim adhuc dictas. Eos at inani sapientem. Te quem suas ullum vim. In vix omnis epicuri persequeris, facer placerat eleifend an cum. Quo tale conceptam ut, cu sit facete lucilius elaboraret. Mediocrem interesset delicatissimi ex mei, has no idque offendit"/><LineBreak/><Run/></TextBlock>
+        </Border>
+        
     </Grid>
 </Window>
