--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -19,7 +19,23 @@
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="5"><Run Text="When should I" /><LineBreak /><Run Text="post new status?" /></TextBlock>
         </Button>
         <TextBlock x:Name="UserName" HorizontalAlignment="Left" Margin="214,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="26" Width="105" FontFamily="Roboto" FontSize="24" Foreground="Black" />
-        <GroupBox x:Name="groupBox" Header="Photo albums" Margin="10,0,11.6,30.8" VerticalAlignment="Bottom" Height="179.8" />
+        <GroupBox x:Name="groupBox" Header="Photo albums" Margin="10,0,11.6,30.8" VerticalAlignment="Bottom" Height="179.8">
+            <ListBox Name="albumList" HorizontalContentAlignment="Stretch" Margin="0,3,-3,-0.2" BorderBrush="Black" Background="#FFF7F7F7">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="0,2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="100" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding Title}" />
+                            <ProgressBar Grid.Column="1" Minimum="0" Maximum="100" Value="{Binding Completion}" />
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+        </GroupBox>
 
     </Grid>
 </Window>
