--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/StatisticsView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/StatisticsView.xaml
@@ -1,12 +1,9 @@
-﻿<Window x:Class="FacebookIntegrationApp.StatisticsView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FacebookIntegrationApp"
-        mc:Ignorable="d"
-        Title="StatisticsView" Height="300" Width="300">
-    <Grid>
-        
+﻿<Window x:Class="FacebookIntegrationApp.StatisticsView" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:FacebookIntegrationApp" mc:Ignorable="d" Title="StatisticsView" d:DesignWidth="825.6" d:DesignHeight="602.2" Background="#FFF7F7F7">
+
+    <Grid HorizontalAlignment="Right" Margin="0,0,3.6,0">
+        <TextBlock x:Name="statisticsTitle" Margin="148.66,56.797,131.54,0" TextWrapping="Wrap" Height="72" Foreground="#FF3B5998" FontSize="46.667" TextAlignment="Center" Text="Facebook Post Statistics" VerticalAlignment="Top" FontFamily="Roboto" FontWeight="Bold" />
+        <TextBlock x:Name="statisticsDataTextBox" Margin="83.86,133.797,61.94,43.003" TextWrapping="Wrap" Foreground="#FF3B5998" FontSize="13.333" TextAlignment="Center" Text="Facebook Post Statistics" FontFamily="Roboto" />
     </Grid>
+
+
 </Window>
