--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/MainView.xaml
@@ -31,10 +31,13 @@
             </ListBox>
 
         </GroupBox>
-        <Label x:Name="AmoutOfPhotosConstantLabel" Content="Amout of photos:" HorizontalAlignment="Left" Margin="22.6,0,0,53.2" VerticalAlignment="Bottom" />
-        <Label x:Name="AmoutOfPhotosData" Content="0" HorizontalAlignment="Left" Margin="153.28,0,0,53.2" VerticalAlignment="Bottom" />
-        <Button x:Name="LikeAlbum" Focusable="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Click="PostStatistics" Margin="0,0,11.6,42" FontFamily="Roboto" FontSize="18" Background="{x:Null}" BorderBrush="{x:Null}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Right" BorderThickness="0" Height="22.133" VerticalAlignment="Bottom" Width="32.133">
-            <Image x:Name="img_Facebook_like_thumb_png" Margin="0" Source="img/Facebook_like_thumb.png" Stretch="Fill" Width="20" Height="20" VerticalAlignment="Center" HorizontalAlignment="Center" d:LayoutOverrides="Width" />
+        <Label x:Name="AmoutOfPhotosConstantLabel" Content="Amout of photos:" HorizontalAlignment="Right" Margin="0,0,33.83,53.2" VerticalAlignment="Bottom" />
+        <Label x:Name="AmoutOfPhotosData" Content="0" HorizontalAlignment="Right" Margin="0,0,11.6,53.2" VerticalAlignment="Bottom" />
+        <Button x:Name="LikeAlbum" Focusable="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Click="PostStatistics" Margin="16.933,0,0,40.467" FontFamily="Roboto" FontSize="18" Background="{x:Null}" BorderBrush="Black" RenderTransformOrigin="0.5,0.5" BorderThickness="1" Height="39.733" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="175.067">
+            <Grid Margin="0,0,0,-16.533" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Label x:Name="label" Content="Like selected album" Margin="-37.105,5.681,0,20.996" FontSize="13.333" d:LayoutOverrides="Height" HorizontalAlignment="Left" />
+                <Image x:Name="img_Facebook_like_thumb_png" Margin="0,0,-30.994,21.663" Source="img/Facebook_like_thumb.png" Stretch="Fill" Width="20" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="25.589" />
+            </Grid>
 
         </Button>
 
