--- a/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/AlbumView.xaml
+++ b/DesignPatterns/Ex01/FacebookIntegrationApp/FacebookIntegrationApp/AlbumView.xaml
@@ -7,8 +7,8 @@
         <Button x:Name="button" Content="Comment on photo" Margin="10,0,10,10" VerticalAlignment="Bottom" BorderBrush="{x:Null}" BorderThickness="0" Background="#FF3B5998" Foreground="White" FontFamily="Roboto" Click="photoCommentClicked" />
         <Label x:Name="amountIndicatorLabel" Content="amount" Margin="181,0,162.8,90.6" FontFamily="Roboto" FontWeight="Bold" FontSize="14.667" Background="{x:Null}" Height="31" VerticalAlignment="Bottom" />
 
-        <Button x:Name="photoLikeButton" HorizontalAlignment="Right" Margin="0,0,10,41.267" VerticalAlignment="Bottom" Width="48" Height="43.293" d:LayoutOverrides="VerticalAlignment" Background="{x:Null}" BorderBrush="{x:Null}">
-            <Image x:Name="img_Facebook_like_thumb_png" Source="img/Facebook_like_thumb.png" Stretch="Fill" Height="30" VerticalAlignment="Center" Width="30" MouseDown="photoLikeClicked" HorizontalAlignment="Center" />
+        <Button x:Name="photoLikeButton" HorizontalAlignment="Right" Margin="0,0,10,41.267" VerticalAlignment="Bottom" Width="48" Height="43.293" d:LayoutOverrides="VerticalAlignment" Background="{x:Null}" BorderBrush="{x:Null}" Click="photoLikeClicked">
+            <Image x:Name="img_Facebook_like_thumb_png" Source="img/Facebook_like_thumb.png" Stretch="Fill" Height="30" VerticalAlignment="Center" Width="30" HorizontalAlignment="Center" />
 
         </Button>
     </Grid>
